--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
   "license": "Anti 996 License Version 1.0",
   "peerDependencies": {
     "react": "^16.8.1",
+    "react-dom": "^16.8.3",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0"
   },
   "dependencies": {
     "react": "^16.8.6",
+    "react-dom": "^16.8.3",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^16.8.14",
+    "@types/react-dom": "^16.8.4",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "awesome-typescript-loader": "^5.2.1",
