--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:umd && npm run build:umd:min",
     "build:umd": "cross-env NODE_ENV=development webpack src/index.ts -o dist/redux-mini-form.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack src/index.ts -o dist/redux-mini-form.min.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "Anti 996 License Version 1.0",
@@ -26,15 +26,23 @@
     "redux-saga": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.11",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^24.7.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
+    "jest": "^24.7.1",
     "prettier": "^1.17.0",
+    "react-hooks-testing-library": "^0.5.0",
+    "react-test-renderer": "^16.8.6",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
